--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
   </script>
 
   <!-- script inject -->
+  <script src="web_app/js/util.js"></script>
   <script src="web_app/js/app.js"></script>
 
 </body>
