--- a/index.html
+++ b/index.html
@@ -177,22 +177,7 @@
 
 
   <!-- service worker inject -->
-  <script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', () => {
-        navigator.serviceWorker.register('./sw.js')
-          .then(registration => {
-            // Registration was successful
-            console.log('ServiceWorker registration successful with scope: ', registration.scope);
-          }).catch(err => {
-            // registration failed :(
-            console.log('ServiceWorker registration failed: ', err);
-          });
-      });
-    }
-
-  </script>
-
+  <script src="js/script.js"></script>
   <!-- script inject -->
   <script src="js/util.js"></script>
   <script src="js/app.js"></script>
