--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="basic-info">
         <div id="currentWeather" class="weather-info">
           <div class="w-cond">
-            <img class="cond-code">
+            <img class="cond-code" alt="cond-code">
             <span class="cond"></span>
           </div>
           <div class="temp">
@@ -131,7 +131,7 @@
 
           <div class="wind-pressure-forecast">
             <div class="wind-icon">
-              <img class="turbine" />
+              <img class="turbine" alt="Turbine"/>
               <!-- <img class="turbine-small"/> -->
             </div>
             <div class="details">
@@ -152,7 +152,7 @@
 
           <div class="weather-details">
             <div class="cond-icon">
-              <img class="weather-condition-icon" />
+              <img class="weather-condition-icon" alt="weather-condition-icon"/>
             </div>
 
             <div class="details">
